[project]
name = "param123d"
version = "0.1.0"
description = ""
authors = [
    {name = "42sol-eu",email = "felix@42sol.eu"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "redbaron (>=0.9.2,<0.10.0)",
    "nicegui (>=2.11.1,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "copier (>=9.4.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
pint = ["pint"]
natu = ["natu"]
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

